Archive2/ca/2f624c369efe53/output
main.cpp:1:1: error: expected unqualified-id before numeric constant
 101
 ^
