Archive2/ca/2f624c369efe53/main.cpp
101
0.0    0	-1024	0	36	-1	-511
0.1	-236	-996	39	50	-33	-509
0.2	-437	-924	74	87	-82	-498
0.3	-584	-836	100	137	-153	-470
0.4	-671	-765	123	194	-237	-411
0.5	-698	-735	148	258	-310	-316
0.6	-671	-753	184	331	-342	-190
0.7	-584	-809	232	407	-308	-47
0.8	-437	-880	291	462	-201	89
0.9	-236	-933	351	469	-44	199
1.0	-1	-944	398	415	116	275
1.1	235	-902	424	316	236	326
1.2	436	-822	427	207	298	360
1.3	583	-731	417	118	315	385
1.4	670	-657	411	60	313	400
1.5	697	-619	423	32	312	404
1.6	670	-622	462	28	324	394
1.7	583	-655	528	50	346	373
1.8	436	-697	610	103	365	342
1.9	235	-723	686	186	358	313
2	0	-714	734	284	305	296
2.1	-236	-666	742	369	197	294
2.2	-437	-591	713	414	50	295
2.3	-584	-510	669	414	-107	280
2.4	-671	-445	634	383	-246	233
2.5	-698	-405	630	341	-350	153
2.6	-671	-392	667	295	-415	52
2.7	-584	-397	741	243	-448	-48
2.8	-437	-404	833	183	-461	-127
2.9	-236	-398	913	119	-467	-173
3.0	-1	-372	954	66	-474	-184
3.1	235	-324	942	37	-480	-175
3.2	436	-266	887	37	-484	-164
3.3	583	-209	814	60	-481	-167
3.4	670	-163	757	102	-465	-190
3.5	697	-128	738	159	-432	-226
3.6	670	-101	767	236	-375	-257
3.7	583	-77	837	332	-291	-259
3.8	436	-48	924	430	-178	-213
3.9	235	-11	996	496	-41	-118
4.0	0	29	1023	499	110	-4
4.1	-236	68	994	435	255	85
4.2	-437	100	920	329	374	115
4.3	-584	125	831	220	453	86
4.4	-671	145	760	134	493	23
4.5	-698	170	729	75	504	-46
4.6	-671	205	746	41	500	-101
4.7	-584	255	801	29	492	-136
4.8	-437	316	870	43	485	-156
4.9	-236	378	922	86	474	-173
5.0	-1	426	931	157	443	-203
5.1	235	450	888	238	375	-254
5.2	436	451	808	308	262	-314
5.3	583	439	717	352	110	-355
5.4	670	430	643	370	-56	-349
5.5	697	440	605	374	-209	-281
5.6	670	480	607	369	-319	-156
5.7	583	547	638	349	-375	1
5.8	436	630	678	304	-381	157
5.9	235	707	702	234	-358	281
6.0	0	755	691	153	-330	360
6.1	-236	761	643	84	-311	398
6.2	-437	730	568	42	-298	414
6.3	-584	683	489	30	-281	427
6.4	-671	647	425	43	-249	445
6.5	-698	642	386	77	-196	466
6.6	-671	678	372	137	-127	476
6.7	-584	753	374	224	-54	457
6.8	-437	845	378	333	-3	388
6.9	-236	924	371	438	5	264
7.0	-1	964	343	501	-35	98
7.1	235	951	296	496	-98	-81
7.2	436	894	239	428	-145	-241
7.3	583	820	184	329	-154	-361
7.4	670	761	139	233	-126	-439
7.5	697	741	105	156	-79	-482
7.6	670	770	78	99	-36	-501
7.7	583	839	51	59	-10	-509
7.8	436	925	19	36	-7	-511
7.9	235	996	-19	38	-19	-511
8.0	0	1022	-60	68	-30	-507
8.1	-236	991	-98	122	-20	-497
8.2	-437	917	-128	187	22	-477
8.3	-584	827	-150	247	95	-438
8.4	-671	755	-168	298	181	-375
8.5	-698	724	-192	343	256	-281
8.6	-671	740	-228	384	300	-156
8.7	-584	793	-280	413	301	-9
8.8	-437	860	-343	412	266	145
8.9	-236	910	-405	365	220	282
9.0	-1	918	-454	280	189	383
9.1	235	875	-477	183	189	438
9.2	436	795	-475	100	215	453
9.3	583	704	-460	49	249	444
9.4	670	630	-449	28	276	430
9.5	697	592	-459	32	287	422
9.6	670	593	-498	62	283	421
9.7	583	622	-567	121	267	419
9.8	436	659	-651	211	248	394
9.9	235	681	-728	320	234	323
10.0	0	669	-775	419	222	192
